FrontEnd/src/components/styles/Summary.module.css
.summaryGrid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
  margin-bottom: 2rem;
  text-align: left;
}

.card {
  background-color: white;
  padding: 1rem;
  border-radius: 0.5rem;
  border: 1px solid #e5e7eb;
}

.balanceCard {
  border: 2px solid #001f3f;
}

.cardHeader {
  padding-bottom: 0.75rem;
}

.cardTitle {
  color: #001f3f;
  margin: 0;
  font-size: 1.1rem;
  font-weight: 450;
}

.value {
  font-size: 1.5rem;
  font-weight: 600;
  font-size: 1.1rem;
  margin: 0;
}

.balancePositive {
  color: #001f3f;
}

.balanceNegative {
  color: #dc2626;
}

/* Estilos Base (Light Mode) para os Cartões */
.balanceCard {
  position: relative;
  background-color: white;
  border: 2px solid #001f3f;
}

.incomeCard {
  position: relative;
  background-color: #00a63e1a; 
  border: 2px solid #00a63e;
  color: #00a63e;
}

.expenseCard {
  position: relative;
  background-color: #e7000b1a;
  border: 2px solid #e7000b;
  color: #e7000b;
}

.incomeCard .cardTitle {
  color: #00a63e;
}

.expenseCard .cardTitle {
  color: #e7000b;
}

/* Estilos do Ícone para os Cartões */
.eyeIcon {
  position: absolute;
  top: 50%;
  bottom: 0.6rem;
  right: 0.6rem;
  transition: 0.2s ease;
  pointer-events: none;
}

.balanceCard .eyeIcon {
  color: #001f3f;
}

.incomeCard .eyeIcon {
  color: #00a63e;
}

.expenseCard .eyeIcon {
  color: #e7000b;
}

@media (min-width: 768px) {
  .summaryGrid {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* =======================================================
   DARK MODE PARA O SUMMARY
======================================================= */
:global(body.dark) .incomeCard {
  background-color: rgba(74, 222, 128, 0.15) !important;
  border-color: #4ade80 !important;
}

:global(body.dark) .incomeCard .cardTitle,
:global(body.dark) .incomeValue {
  color: #4ade80 !important;
}

:global(body.dark) .expenseCard {
  background-color: rgba(248, 113, 113, 0.15) !important;
  border-color: #f87171 !important;
}

:global(body.dark) .expenseCard .cardTitle,
:global(body.dark) .expenseValue {
  color: #f87171 !important;
}

:global(body.dark) .cardHeader,
:global(body.dark) .cardTitle {
  background-color: transparent !important;
}

:global(body.dark) .balanceCard {
  background-color: rgba(173, 178, 180, 0.489) !important;
  border-color: #e3dbdb !important;
}

:global(body.dark) .balanceCard .eyeIcon {
  color: #babdc2 !important;
}

:global(body.dark) .incomeCard .eyeIcon {
  color: #4ade80 !important ;
}

:global(body.dark) .expenseCard .eyeIcon {
  color: #f87171 !important ;
}

/* =======================================================
   DARK MODE - HOVER DOS CARDS
======================================================= */
:global(body.dark) .balanceCard:hover {
  background-color: rgba(173, 178, 180, 0.65) !important;
  border-color: #ffffff !important;
}

:global(body.dark) .incomeCard:hover {
  background-color: rgba(74, 222, 128, 0.28) !important;
  border-color: #4ade80 !important;
  border-width: 2px !important;
}

:global(body.dark) .expenseCard:hover {
  background-color: rgba(248, 113, 113, 0.28) !important;
  border-color: #f87171 !important;
  border-width: 2px !important;
}

